[package]
name = "momoka-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
gql_client = "1.0.7"
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
ethers = "2.0.4"
clap = { version = "4.2.5", features = ["derive"] }
futures = "0.3"
async-trait = "0.1.51"
lazy_static = "1.4.0"
bundlr-sdk = "0.4.1"
regex = "1.5"
json = "0.12"
chrono = "0.4"
strum = "0.24.1"
strum_macros = "0.24.3"
data-encoding = "2.3.0"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
hex = "0.4.3"